--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,11 +1,11 @@
 include(FetchContent)
-FetchContent_Declare(gtest
-        QUIET
+FetchContent_Declare(
+        googletest
         DOWNLOAD_EXTRACT_TIMESTAMP
+        # Specify the commit you depend on and update it regularly.
         URL https://github.com/google/googletest/archive/refs/tags/v1.14.0.tar.gz
 )
-set(BUILD_GMOCK OFF CACHE BOOL "" FORCE)
-FetchContent_MakeAvailable(gtest)
+FetchContent_MakeAvailable(googletest)
 
 add_executable(
         unit_tests
@@ -26,11 +26,4 @@ target_include_directories(unit_tests
         ../src
 )
 
-# automatic discovery of unit tests
-include(GoogleTest)
-gtest_discover_tests(unit_tests
-        PROPERTIES
-        LABELS "unit_tests"
-        DISCOVERY_TIMEOUT  # how long to wait (in seconds) before crashing
-        240
-)
+add_test(NAME tests COMMAND unit_tests)
