--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,23 +1,21 @@
-on: [push]
+name: build-and-test
+
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    defaults:
-      run:
-        shell: bash
-
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Configure CMake
-        run: cmake -S $GITHUB_WORKSPACE -B ${{runner.workspace}}/build
-
-      - name: Build
-        working-directory: ${{runner.workspace}}/build
-        run: cmake --build .
-
-      - name: Test
-        working-directory: ${{runner.workspace}}/build
-        run: GTEST_OUTPUT=xml:test-results/ GTEST_COLOR=1 ctest -V
+      - name: Install gtest manually
+        run: sudo apt-get install libgtest-dev && cd /usr/src/gtest && sudo cmake CMakeLists.txt && sudo make && sudo cp lib/*.a /usr/lib && sudo ln -s /usr/lib/libgtest.a /usr/local/lib/libgtest.a && sudo ln -s /usr/lib/libgtest_main.a /usr/local/lib/libgtest_main.a
+      - uses: actions/checkout@v1
+      - name: configure
+        run: mkdir build && cd build && cmake -DCMAKE_BUILD_TYPE=Debug -DCMAKE_CXX_FLAGS="-Werror"
+      - name: make
+        run: cd build && make
+      - name: Run Test
+        run: /home/runner/work/github_actions_gtest_example/github_actions_gtest_example/build/test/github_actions_gtest_example.test
