Adaptation of CI pipeline

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,12 +6,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Install gtest manually
-        run: sudo apt-get install libgtest-dev && cd /usr/src/gtest && sudo cmake CMakeLists.txt && sudo make && sudo cp lib/*.a /usr/lib && sudo ln -s /usr/lib/libgtest.a /usr/local/lib/libgtest.a && sudo ln -s /usr/lib/libgtest_main.a /usr/local/lib/libgtest_main.a
       - uses: actions/checkout@v1
       - name: configure
-        run: cmake -DCMAKE_BUILD_TYPE=Debug "-DCMAKE_CXX_FLAGS=-Werror -Wall -Wextra -pedantic" -S ./owned_ptr -B ./owned_ptr/cmake-build-debug
+        run: cmake -DCMAKE_BUILD_TYPE=Debug "-DCMAKE_CXX_FLAGS=-Werror -Wall -Wextra -pedantic" -S . -B ./cmake-build-debug
       - name: make
         run: cmake --build build --config Debug
       - name: Run Test
-        run: ./owned_ptr/cmake-build-debug/test/unit_tests
+        run: ./cmake-build-debug/test/unit_tests
