--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,6 @@ jobs:
       - name: configure
         run: cmake -DCMAKE_BUILD_TYPE=Debug "-DCMAKE_CXX_FLAGS=-Werror -Wall -Wextra -pedantic" -S . -B ./cmake-build-debug
       - name: make
-        run: cmake --build build --config Debug
+        run: cmake --build ./cmake-build-debug --target unit_tests
       - name: Run Test
         run: ./cmake-build-debug/test/unit_tests
