--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: configure
-        run: cmake -DCMAKE_BUILD_TYPE=Debug "-DCMAKE_CXX_FLAGS=-Werror -Wall -Wextra -pedantic" -S . -B ./cmake-build-debug
+        run: cmake -DCMAKE_BUILD_TYPE=Debug "-DCMAKE_CXX_FLAGS=-Werror -Wall -Wextra -pedantic -fsanitize=leak" -S . -B ./cmake-build-debug
       - name: make
         run: cmake --build ./cmake-build-debug --target unit_tests
       - name: Run Test
